--- a/roles/ansible-wazuh-agent/templates/var-ossec-etc-local-internal-options.conf.j2
+++ b/roles/ansible-wazuh-agent/templates/var-ossec-etc-local-internal-options.conf.j2
@@ -13,4 +13,5 @@
 
 # Logcollector - If it should accept remote commands from the manager
 logcollector.remote_commands=1
-
+wazuh_command.remote_commands=1
+agent.remote_conf=1
